[gd_scene load_steps=22 format=3 uid="uid://fxeh0lendbsd"]

[ext_resource type="Script" uid="uid://sndn68dvm12e" path="res://Assets/Scripts/door.gd" id="1_au8wm"]
[ext_resource type="Texture2D" uid="uid://b2si7els4ggou" path="res://Assets/StaticAssets/Environments/Cemetery/Props/cypt8 entrance glow animation 160x280.png" id="1_sq1yy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_au8wm"]
size = Vector2(139, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7g3o"]
atlas = ExtResource("1_sq1yy")
region = Rect2(0, 0, 160, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_88xt3"]
atlas = ExtResource("1_sq1yy")
region = Rect2(160, 0, 160, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6qij"]
atlas = ExtResource("1_sq1yy")
region = Rect2(320, 0, 160, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_w21dm"]
atlas = ExtResource("1_sq1yy")
region = Rect2(480, 0, 160, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgxbp"]
atlas = ExtResource("1_sq1yy")
region = Rect2(640, 0, 160, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_oortn"]
atlas = ExtResource("1_sq1yy")
region = Rect2(800, 0, 160, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_wog5j"]
atlas = ExtResource("1_sq1yy")
region = Rect2(960, 0, 160, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_prt5r"]
atlas = ExtResource("1_sq1yy")
region = Rect2(1120, 0, 160, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwros"]
atlas = ExtResource("1_sq1yy")
region = Rect2(1280, 0, 160, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_2h3pd"]
atlas = ExtResource("1_sq1yy")
region = Rect2(1440, 0, 160, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ck45"]
atlas = ExtResource("1_sq1yy")
region = Rect2(1600, 0, 160, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_5admh"]
atlas = ExtResource("1_sq1yy")
region = Rect2(1760, 0, 160, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1qgd"]
atlas = ExtResource("1_sq1yy")
region = Rect2(1920, 0, 160, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwuos"]
atlas = ExtResource("1_sq1yy")
region = Rect2(2080, 0, 160, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikewn"]
atlas = ExtResource("1_sq1yy")
region = Rect2(2240, 0, 160, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6tsk"]
atlas = ExtResource("1_sq1yy")
region = Rect2(2400, 0, 160, 280)

[sub_resource type="SpriteFrames" id="SpriteFrames_6ksk2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7g3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88xt3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6qij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w21dm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgxbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oortn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wog5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_prt5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwros")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2h3pd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ck45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5admh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1qgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwuos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikewn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6tsk")
}],
"loop": true,
"name": &"glow",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_3vtic"]
radius = 52.153618

[node name="GlowingCrypt" type="StaticBody2D"]
collision_mask = 2
script = ExtResource("1_au8wm")
next_level = "res://Assets/Levels/crypts-hall-1.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.5, 15)
shape = SubResource("RectangleShape2D_au8wm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_6ksk2")
animation = &"glow"
autoplay = "glow"
frame_progress = 0.83822
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 33)
shape = SubResource("CircleShape2D_3vtic")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_player_present"]
[connection signal="area_shape_exited" from="Area2D" to="." method="_on_player_exit"]
